--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,10 @@ __pycache__/
 # Project files, i.e. `.project`, `.actionScriptProperties` and `.flexProperties`
 # should NOT be excluded as they contain compiler settings and other important
 # information for Eclipse / Flash Builder.
+podatki/faze.csv
+podatki/nahajanja.csv
+podatki/osebe.csv
+podatki/naprave.csv
+podatki/podjetja.csv
+podatki/popravila.csv
+podatki/skrbnistva.csv
